--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <title>D&D Tools</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico" sizes="any">
+    <link rel="icon" href="assets/images/favicon.svg" sizes="any" type="image/svg+xml">
 </head>
 
 <body>
